Add ordered list of topics

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,28 @@
     <link rel="stylesheet" href="/main.css" title="CSS" type="text/css"/>
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <a href="/about">About ME</a>
+    <h1>Bayou Bandit</h1>
+      <p> Click <a href="/about">HERE</a> to learn about me. </p>
+    <br/>
+    <h2> Choose your own adventure!</h2>
+      <p> <strong>Click a topic below that interests you.</strong> </p>
+
+      <ul>
+        <li><a href="/Growing_up_in_louisiana">Growing Up In Small Town Louisiana</a></li>
+        <li><a href="/breaking_the_mould">Breaking the Mould / Getting Outside of the Box</a></li>
+        <li><a href="/skateboarding">How Skateboarding Saved Me</a></li>
+        <li><a href="/graffiti">The Writing Was On the Wall</a></li>
+        <li><a href="/doing_it_the_hard_way">Doing It the Hard Way</a></li>
+        <li><a href="/Double_H">Double H High Adventure Base</a></li>
+        <li><a href="/sufferfests">Sufferfests of the Ski Mountaineering, Climbing, and Running Variety</a>
+        <li><a href="/hopping_freight_trains">Hopping Freight Trains in America & Mexico</a></li>
+        <li><a href="/travel_games_one">Travel Games #1 Challenging Budgets</a></li>
+        <li><a href="/budgeing">Bayou Bandit's Unpopular But Hightly Effective Tips For Saving Money</a></li>
+        <li><a href="/chasing_winter">Chasing Winter(One year in New Zealand & SE Asia)</a></li>
+        <li><a href="/solo_mexico">Solo Travel In Mexico (A Motorcycle Adventure)</a></li>
+        <li><a href="/mental_health">The Making of a Career in Mental Health</a></li>
+        <li><a href="/for_the_love_of_god">For the Love of God... Parent Your Childeren</a></li>
+        <li><a href="/starting_over">My Journey Into Programming</a></li>
+      </ul>
   </body>
 </html>
