--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>About Me!</h1>
-    <p>Here's some stuff to know.</p>
+    <p>My Name is Nathan. I grew up in Louisiana. I currently reside in Boulder, CO.</p>
   </body>
 </html>
