Correct spelling error

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
 
       <ul>
         <li><a href="/Growing_up_in_louisiana">Growing Up In Small Town Louisiana</a></li>
-        <li><a href="/breaking_the_mould">Breaking the Mould / Getting Outside of the Box</a></li>
+        <li><a href="/breaking_the_mold">Breaking the Mould / Getting Outside of the Box</a></li>
         <li><a href="/skateboarding">How Skateboarding Saved Me</a></li>
         <li><a href="/graffiti">The Writing Was On the Wall</a></li>
         <li><a href="/doing_it_the_hard_way">Doing It the Hard Way</a></li>
