--- a/app/views/about.html
+++ b/app/views/about.html
@@ -4,7 +4,10 @@
       <link rel="stylesheet" href="/main.css" title="CSS" type="text/css"/>
   </head>
   <body>
-    <h1>About Me!</h1>
-    <p>My Name is Nathan. I grew up in Louisiana. I currently reside in Boulder, CO.</p>
+    <h1 class="header">Who is Bayou Bandit</h1>
+    <div class="story">
+    <p>My Name is Nathan. I was born and raised in the backwoods of Louisiana on Bayou Bartholomew. I currently reside in Boulder, CO.</p>
+  </div>
+  <footer> </footer>
   </body>
 </html>
