--- a/app/views/error.html
+++ b/app/views/error.html
@@ -3,6 +3,11 @@
     <title>Personal Site</title>
   </head>
   <body>
-    <h1>Page not found.</h1>
+    <pre>                ,,,
+                     .'    `/\_/\
+                   .'       <@I@>
+        <((((((((((  )____(  \./
+                   \( \(   \(\(
+                    `-"`-"  " "  <h1> Page not found.</h1></pre>
   </body>
 </html>
