Update lousiana and add new_beginnings

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,17 +1,17 @@
 <html>
   <head>
-    <title>Personal Site</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="/main.css" title="CSS" type="text/css"/>
   </head>
   <body>
     <h1>Bayou Bandit</h1>
-      <p> Click <a href="/about">HERE</a> to learn about me. </p>
+      <p> Click <a href="/about">here</a> to learn about me. </p>
     <br/>
     <h2> Choose your own adventure!</h2>
       <p> <strong>Click a topic below that interests you.</strong> </p>
 
       <ul>
-        <li><a href="/Growing_up_in_louisiana">Growing Up In Small Town Louisiana</a></li>
+        <li><a href="/louisiana">Growing Up In Small Town Louisiana</a></li>
         <li><a href="/breaking_the_mold">Breaking the Mould / Getting Outside of the Box</a></li>
         <li><a href="/skateboarding">How Skateboarding Saved Me</a></li>
         <li><a href="/graffiti">The Writing Was On the Wall</a></li>
@@ -25,7 +25,8 @@
         <li><a href="/solo_mexico">Solo Travel In Mexico (A Motorcycle Adventure)</a></li>
         <li><a href="/mental_health">The Making of a Career in Mental Health</a></li>
         <li><a href="/for_the_love_of_god">For the Love of God... Parent Your Childeren</a></li>
-        <li><a href="/starting_over">My Journey Into Programming</a></li>
+        <li><a href="/new_beginnings">New Beginnings</a></li>
       </ul>
+    <footer> </footer>
   </body>
 </html>
